src/main/resources/static/css/photoroster.css
/*-
 * #%L
 * photoroster
 * %%
 * Copyright (C) 2015 - 2022 Indiana University
 * %%
 * Redistribution and use in source and binary forms, with or without modification,
 * are permitted provided that the following conditions are met:
 * 
 * 1. Redistributions of source code must retain the above copyright notice, this
 *    list of conditions and the following disclaimer.
 * 
 * 2. Redistributions in binary form must reproduce the above copyright notice,
 *    this list of conditions and the following disclaimer in the documentation
 *    and/or other materials provided with the distribution.
 * 
 * 3. Neither the name of the Indiana University nor the names of its contributors
 *    may be used to endorse or promote products derived from this software without
 *    specific prior written permission.
 * 
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
 * IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT,
 * INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
 * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
 * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
 * OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
 * OF THE POSSIBILITY OF SUCH DAMAGE.
 * #L%
 */
button.transparencyOverride, input[type=text].transparencyOverride, div.transparencyOverride, li.transparencyOverride {
    background-color: #FFFFFF;
}

.currentViewColor {
    fill: lightgray;
}

.photoGridPanel {
    display: inline-table;
    width: 214px;
    height: 290px;
}

.photoListPanel {
    width: 600px;
    min-height: 140px;
}

.cardPanelPaddingOverride {
    padding: 1.5rem 0.5rem 1.0rem 0.50rem;

}

.twentyfive-percent {
    width: 25%;
}

.imageContainer {
    position: relative;
    display: inline-block;
    border: none;
    background-color: transparent;
    padding: 0;
    height: inherit;
}

.imageWrapper {
    padding: 5px;
}

.ferpa {
    width: 100%;
    background: #f5bb17;
    position: absolute;
    bottom: 0;
    color: black;
}

.ferpaModalOverride {
    width: 240px;
    line-height: 1.1;
    justify-content: center;
}

.overrideDropdownWidth {
    min-width: 20rem;
}

.pointerEventOverride {
    pointer-events: none;
}

.textOverflow {
    max-width: 160px;
    white-space: nowrap;
    overflow: hidden;
    display: inline-block;
    text-overflow: ellipsis;
}

.forceWrap {
    overflow-wrap: break-word;
}

.search-input {
    min-width: 217px;
    max-width: 217px;
}

.rvt-badge--secondary.student-badge {
    border-color: transparent;
}

img.image-S75x100 {
    height: 100px;
}

img.image-S240x320 {
    height: 200px;
}

img.image-CanvasAvatar {
    height: 100px;
}

div.ferpa-S75x100, img.image-S75x100 {
    width: 75px;
}

div.ferpa-S240x320, img.image-S240x320 {
    width: 150px;
}

div.ferpa-CanvasAvatar, img.image-CanvasAvatar {
    width: 100px;
}

.card-S75x100 {
    height: 290px;
}

.card-S240x320 {
    height: 390px;
}

.card-CanvasAvatar {
    height: 290px;
}

.loader_container {
    display: flex;
    align-items: center;
}

.actionBar {
    display: flex;
    flex-direction: column;
}

.name-wrapper {
    display: inline-block;
    min-height: 30px;
    max-width: 160px;
    padding-right: 5px;
}

.namecoach {
    display: inline-block;
    vertical-align: top;
    cursor: pointer;
}

#printHeader {
    display: none;
}

@media screen and (min-width: 740px) {
    .actionBar {
        flex-direction: row;
    }
}

.ie11CursorOverride {
    cursor: pointer;
}

.overrideBoxColor {
    background-color: #fafafa
}

a.svgObjectHelper {
    position: relative;
    display: inline-block;
    width: 100%;
}
a.svgObjectHelper:after {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left:0;
}
.view-option {
    border: none;
    padding: 0.1em;
}

.keep-whitespace {
    white-space: pre;
}

.photo-option {
  white-space: nowrap;
}

/* overriding clearable input to match rivet 2 color */
.rvt-clearable-input {
    border: 1px solid #75838f !important;
}

